Support for Apache Spark 4.0.0, which includes Scala 2.13 as its bundled Scala version.